--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
  
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-           id="org.apache.cordova.plugin.plugin_open_gps"
+           id="plugin_open_gps"
       version="1.0.0">
     <name>GPS</name>
     <description>Start or stop GPS</description>
