--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "plugin_open_gps",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,6 @@
   "bugs": {
     "url": "https://github.com/adminsoyoda/plugin_open_gps/issues"
   },
-  "homepage": "https://github.com/adminsoyoda/plugin_open_gps#readme"
+  "homepage": "https://github.com/adminsoyoda/plugin_open_gps#readme",
+  "description": ""
 }
